		- Fixed missile contact detonation logic, a bug was present which lead to inaccurate detection of missile contact.
		- Improved AAMLoft performance against maneuvering targets.
		- EMP warheads only detonate when armed and no longer do additional damage.
- Competition:
	- Add an option for the continuous spawn central point to follow the centroid of surviving craft (biased back towards the original spawn point).
	- Add an option to automatically resume continuous spawn and to automatically shutdown KSP when continuous spawn ends due to having fewer than 2 craft left.
	- Update the continuous spawn log parser to handle multiple files, either separately or combined.
	- Bias the continuous spawn's "bubble shuffle" to prioritise craft with fewer spawns.
	- Hide the ALIVE / DEAD string in continuous spawn when the UI is hidden.

v1.6.9.0
IMPROVEMENTS / FIXES
- UI:
	- Fix the alternate (hidden UI) window locations (for scores and vessel switcher) not being saved correctly.
- General:
	- New texture for 1.25m radomes.
	- Add a max distance threshold setting to Team Icons.
	- Fix "Camera Switch: Incl. Missiles" not switching to missiles about to hit their target.
- AI / WM:
	- Add new Orbital AI part for spacecraft in orbit:
		- The Orbital AI will use orbital maneuvers to close within gun range of the target to fire weapons. It will also automatically fire missiles when able.
		- The AI will maneuver at the Maneuver Speed setting and once within gun range try to fire guns while at the Strafe Speed setting.
		- It will evade missiles based on the countermeasure settings on the Weapons Manager and evade gunfire using AI settings similar to those on the Pilot AI.
		- When spawned at orbital altitudes using the BDA Vessel Spawner, craft with the Orbital AI will be automatically spawned into orbit (other options for orbital spawning are cheat menu and HyperEdit mod).