@@ -66,6 +66,7 @@
 		- Fixed missile contact detonation logic, a bug was present which lead to inaccurate detection of missile contact.
 		- Improved AAMLoft performance against maneuvering targets.
 		- EMP warheads only detonate when armed and no longer do additional damage.
+		- Add dumbTerminalGuidance bool (default true) to missiles; setting dumbTerminalGuidance = false will have missiles continue to use primary guidance until terminal targeting mode has a lock, vs immediately switching to terminal guidance the moment the distance trigger is satisfied.
 - Competition:
 	- Add an option for the continuous spawn central point to follow the centroid of surviving craft (biased back towards the original spawn point).
 	- Add an option to automatically resume continuous spawn and to automatically shutdown KSP when continuous spawn ends due to having fewer than 2 craft left.
